# rest-server-framework-rs

./: Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  utils.rs
src/database/: mod.rs  oauth.rs  user.rs
src/v1/: macros.rs  mod.rs  oauth.rs  public.rs  user.rs
